<resources>
    <string name="app_name">TournamentMatch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="parker">Parker</string>
    <string name="james">James</string>
    <string name="v">V</string>
    <string name="share_via_whatsapp">Share via Whatsapp</string>
    <string name="share_via_instagram">Share via Instagram</string>
    <string name="share_via_twitter">Share via Twitter</string>
    <string name="share_via_facebook">Share via Facebook</string>
    <string name="todo">TODO</string>
    </resources>
